# AI-JiaoBen

./: .env  Dockerfile  create_tables.py  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml
app/api/: answer.py  question.py  user.py
app/core/: cors.py  db.py  settings.py
app/models/: answer.py  question.py  user.py
app/schemas/: answer.py  question.py  user.py
app/service/: answer_service.py  question_service.py  user_service.py
app/utils/: common_util.py  jwt_util.py  xfyun_lfasr_util.py
nginx/conf/: default.conf
tests/: test_answer_service.py  test_user_service.py
